--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         <link rel="stylesheet" href="css/base.css">
     </head>
     <body>
+        <div id="logo" align="center">
+            <img src="imgs/logo_med.png" alt="Good Eats Logo" />
+        </div>
         <div id="search_panel" class="search_collapsed">
+            <!--side bar content-->
+        </div>
+        <div id="content" class="draggable">
 
         </div>
         <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
