--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Good Eats</title>
         <link rel="stylesheet" href="css/base.css">
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+        <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+        <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+        <script type="text/javascript" src="https://raw.github.com/padolsey/prettyPrint.js/master/prettyprint.js"></script>
     </head>
     <body>
         <div id="logo" align="center">
