--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
         <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
         <script type="text/javascript" src="https://raw.github.com/padolsey/prettyPrint.js/master/prettyprint.js"></script>
+        <script type="text/javascript" src="js/yelp_search.js"></script>
     </head>
     <body>
 
