--- a/extruderLeft.html
+++ b/extruderLeft.html
@@ -2,8 +2,8 @@
 
 	<form class="form-search">
     	<div class="input-append">
-    		<input type="text" class="span2 search-query">
-    		<button type="submit" class="btn">Search</button>
+    		<input type="text" class="span2 search-query" />
+    		<button type="submit" class="btn" onClick="searchYelp()">Search</button>
     	</div>
     </form>
 
@@ -14,12 +14,12 @@
             <img src="http://placehold.it/64x64" class="media-object">
         </a>
        	<div class="media-body">
-            <h4 class="media-heading">Result 1 - 
+            <h4 class="media-heading">Result 1 -
             	<span id="stars" style="position:relative; top: 4px;"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></span>
             </h4>
 			Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
         </div>
     </div>
-         
+
 </div>
