--- a/extruderLeft.html
+++ b/extruderLeft.html
@@ -3,7 +3,7 @@
 	<form class="form-search">
     	<div class="input-append">
     		<input type="text" class="span2 search-query" />
-    		<button type="submit" class="btn" onClick="searchYelp()">Search</button>
+    		<button type="submit" class="btn">Search</button>
     	</div>
     </form>
 
