--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Good Eats</title>
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/extruder.css">
+        <link rel="stylesheet" href="css/base.css">
         <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/extruder.js" type="text/javascript"></script>
@@ -53,8 +53,8 @@
                 <div class="row">
                     <div class="bs-docs-example bs-docs-example-popover">
 
-                        <div class="popover top">
-                            <div class="arrow"></div>
+                        <div class="popover top pin-align">
+                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Popover top</h3>
                             <div class="popover-content">
                                 <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
