--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
                         <form class="navbar-search pull-right">
                             <div class="input-append">
-                                <input type="text" class="search-query span3" placeholder="Enter query..." style="margin-right: 50px;">
-                                <input type="text" class="search-query span3" placeholder="Enter Zipcode or City..." style="margin-right: 50px;">
+                                <input type="text" class="search-query span3" placeholder="Enter query..." style="margin-right: 20px;">
+                                <input type="text" class="search-query span3" placeholder="Enter Zipcode or City..." style="margin-right: 20px;">
                                 <button type="submit" class="btn">Search</button>
                             </div>
                         </form>
@@ -53,21 +53,24 @@
                             </div>
                         </div>
 
-                         <div class="popover top">
+                         <div class="popover top pin-align">
+                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Popover top</h3>
                             <div class="popover-content">
                                 <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
                             </div>
                         </div>
 
-                         <div class="popover top">
+                         <div class="popover top pin-align">
+                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Popover top</h3>
                             <div class="popover-content">
                                 <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
                             </div>
                         </div>
 
-                         <div class="popover top">
+                         <div class="popover top pin-align">
+                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Popover top</h3>
                             <div class="popover-content">
                                 <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
