--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                         <div class="popover top pin-align">
                             <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
-                            <h3 class="Eleven Madison Park">Popover top</h3>
+                            <h3 class="popover-title">Eleven Madison Park</h3>
                             <div class="popover-content">
                                 <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
                             </div>
