--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                         <form class="navbar-search pull-right">
                             <div class="input-append">
-                                <input type="text" class="search-query span3" placeholder="Enter query..." style="margin-right: 20px;">
+                                <input type="text" class="search-query span3" placeholder="Enter terms, Ex: food or italian" style="margin-right: 20px;">
                                 <input type="text" class="search-query span3" placeholder="Enter Zipcode or City..." style="margin-right: 20px;">
                                 <button type="submit" class="btn">Search</button>
                             </div>
@@ -103,7 +103,7 @@
             $('#bs-docs-example-popover').isotope({
                 itemSelector : '.popover',
                 sortBy : 'name',
-                sortAscending : false 
+                sortAscending : false
             });
 
             $(".media").draggable({});
