--- a/index.html
+++ b/index.html
@@ -51,7 +51,25 @@
                             <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Eleven Madison Park</h3>
                             <div class="popover-content">
-                                <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
+                                        </td>
+                                        <td style="padding-left: 5px;">
+                                            <p>706 Mission St.</p>
+                                            <p>San Francisco, CA, 94103</p>
+                                        </td>
+                                    </tr>
+                                    <tr style="padding-top: 7px;">
+                                        <td>
+                                            <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_3.png" alt="Rating image" />
+                                        </td>
+                                        <td>
+                                            <p>+1-415-908-3801</p>
+                                        </td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
 
