--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                                             <p>San Francisco, CA, 94103</p>
                                         </td>
                                     </tr>
-                                    <tr style="padding-top: 7px;">
-                                        <td>
+                                    <tr>
+                                        <td style="padding-top: 7px;">
                                             <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_3.png" alt="Rating image" />
                                         </td>
                                         <td>
-                                            <p>+1-415-908-3801</p>
+                                            <p>Phone: +1-415-908-3801</p>
                                         </td>
                                     </tr>
                                 </table>
@@ -77,7 +77,25 @@
                             <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Gramercy Tavern</h3>
                             <div class="popover-content">
-                                <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
+                                        </td>
+                                        <td style="padding-left: 5px;">
+                                            <p>706 Mission St.</p>
+                                            <p>San Francisco, CA, 94103</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding-top: 7px;">
+                                            <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_5.png" alt="Rating image" />
+                                        </td>
+                                        <td>
+                                            <p>Phone: +1-415-908-3801</p>
+                                        </td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
 
@@ -85,7 +103,25 @@
                             <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Graham Avenue Meats And Deli</h3>
                             <div class="popover-content">
-                                <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
+                                        </td>
+                                        <td style="padding-left: 5px;">
+                                            <p>706 Mission St.</p>
+                                            <p>San Francisco, CA, 94103</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding-top: 7px;">
+                                            <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_1.png" alt="Rating image" />
+                                        </td>
+                                        <td>
+                                            <p>Phone: +1-415-908-3801</p>
+                                        </td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
 
@@ -93,7 +129,25 @@
                             <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title">Trader Joe's Wine Shop</h3>
                             <div class="popover-content">
-                                <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
+                                        </td>
+                                        <td style="padding-left: 5px;">
+                                            <p>706 Mission St.</p>
+                                            <p>San Francisco, CA, 94103</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding-top: 7px;">
+                                            <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_5.png" alt="Rating image" />
+                                        </td>
+                                        <td>
+                                            <p>Phone: +1-415-908-3801</p>
+                                        </td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                         <div class="clearfix"></div>
