--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="navbar-inner">
                 <div class="container-fluid">
 
-                    <a style="color:#0088CC;" class="brand" href="/">good<span style="color: #06f;">eats</span></a>
+                    <a style="color:#0088CC;" class="brand" href="/">Good <span style="color: #06f;">Eats</span></a>
                     <div class="nav-collapse collapse">
 
                         <ul class="nav pull-right">
@@ -196,7 +196,7 @@
             });
 
             $('#sort-by a').click(function(){
-                
+
 
                 // get href attribute, minus the '#'
                 var sortName = $(this).attr('href').slice(1);
