quick fix on desktop

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="bs-docs-example bs-docs-example-popover">
 
                         <div class="popover top pin-align">
-                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
+                            <div class="pin"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title" name>Eleven Madison Park</h3>
                             <div class="popover-content">
                                 <table>
@@ -88,7 +88,7 @@
                         </div>
 
                          <div class="popover top pin-align">
-                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
+                            <div class="pin"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title" name>Gramercy Tavern</h3>
                             <div class="popover-content">
                                 <table>
@@ -114,7 +114,7 @@
                         </div>
 
                          <div class="popover top pin-align">
-                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
+                            <div class="pin"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title" name>Graham Avenue Meats And Deli</h3>
                             <div class="popover-content">
                                 <table>
@@ -140,7 +140,7 @@
                         </div>
 
                          <div class="popover top pin-align">
-                            <div class="pin"><img src="imgs/pin_small.png" alt="Pin overlay"/></div>
+                            <div class="pin"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title" name>Trader Joe's Wine Shop</h3>
                             <div class="popover-content">
                                 <table>
@@ -205,7 +205,7 @@
                 return false;
             });
 
-            
+
 
 
 
