removed upper margin from content div

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div id="content" class="draggable" style="z-index:999; margin-top: 50px;">
+        <div id="content" class="draggable" style="z-index:999;">
 
             <div style="padding:73px 50px 50px 113px;">
                 <div class="row">
