--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                                             <p>Phone: +1-415-908-3801</p>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td colspan=2>
+                                            <a href="#myModal" role="button" class="btn btn-mini" data-toggle="modal">Launch demo modal</a>
+                                        </td>
+                                    </tr>
                                 </table>
                             </div>
                         </div>
@@ -210,5 +215,19 @@
             $(".media").draggable({});
         </script>
 
+        <!-- Modal -->
+        <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">Modal header</h3>
+          </div>
+          <div class="modal-body">
+            <p>One fine body…</p>
+          </div>
+          <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+            <button class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
     </body>
 </html>
