--- a/index.html
+++ b/index.html
@@ -29,19 +29,6 @@
                     <a style="color:#0088CC;" class="brand" href="/">Good <span style="color: #06f;">Eats</span></a>
                     <div class="nav-collapse collapse">
 
-                        <ul class="nav pull-right">
-                            <li class="divider-vertical"></li>
-                            <li class="dropdown">
-                                <a data-toggle="dropdown" class="dropdown-toggle" href="#">Sort <b class="caret"></b></a>
-                                <ul class="dropdown-menu" id="sort-by">
-                                  <li><a href="#name">Name</a></li>
-                                  <li><a href="#">Another action</a></li>
-                                  <li><a href="#">Something else here</a></li>
-                                  <li class="divider"></li>
-                                  <li><a href="#">Separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
 
                         <form class="navbar-search pull-right">
                             <div class="input-append">
@@ -50,6 +37,20 @@
                                 <button type="submit" class="btn btn-primary">Search</button>
                             </div>
                         </form>
+
+                        <ul class="nav pull-right">
+                            <li class="dropdown">
+                                <a data-toggle="dropdown" class="dropdown-toggle" href="#">Sort <b class="caret"></b></a>
+                                <ul class="dropdown-menu" id="sort-by">
+                                  <li><a href="#name">Name</a></li>
+                                  <li><a href="#">Rating</a></li>
+                                  <li><a href="#">Popularity</a></li>
+                                  <li class="divider"></li>
+                                  <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </li>
+                            <li class="divider-vertical"></li>
+                        </ul>
 
                     </div><!--/.nav-collapse -->
                 </div>
@@ -74,6 +75,7 @@
                                         <td style="padding-left: 5px;">
                                             <p>706 Mission St.</p>
                                             <p>San Francisco, CA, 94103</p>
+                                            <p>Phone: +1-415-908-3801</p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -81,7 +83,7 @@
                                             <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_3.png" alt="Rating image" />
                                         </td>
                                         <td>
-                                            <p>Phone: +1-415-908-3801</p>
+                                            <p>Reviews: 126</p>
                                         </td>
                                     </tr>
                                 </table>
@@ -100,6 +102,7 @@
                                         <td style="padding-left: 5px;">
                                             <p>706 Mission St.</p>
                                             <p>San Francisco, CA, 94103</p>
+                                            <p>Phone: +1-415-908-3801</p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -107,7 +110,7 @@
                                             <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_5.png" alt="Rating image" />
                                         </td>
                                         <td>
-                                            <p>Phone: +1-415-908-3801</p>
+                                            <p>Reviews: 1008</p>
                                         </td>
                                     </tr>
                                 </table>
@@ -126,6 +129,7 @@
                                         <td style="padding-left: 5px;">
                                             <p>706 Mission St.</p>
                                             <p>San Francisco, CA, 94103</p>
+                                            <p>Phone: +1-415-908-3801</p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -133,7 +137,7 @@
                                             <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_1.png" alt="Rating image" />
                                         </td>
                                         <td>
-                                            <p>Phone: +1-415-908-3801</p>
+                                            <p>Reviews: 69</p>
                                         </td>
                                     </tr>
                                 </table>
@@ -152,6 +156,7 @@
                                         <td style="padding-left: 5px;">
                                             <p>706 Mission St.</p>
                                             <p>San Francisco, CA, 94103</p>
+                                            <p>Phone: +1-415-908-3801</p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -159,7 +164,7 @@
                                             <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_5.png" alt="Rating image" />
                                         </td>
                                         <td>
-                                            <p>Phone: +1-415-908-3801</p>
+                                            <p>Reviews: 2</p>
                                         </td>
                                     </tr>
                                 </table>
