added onClick  to cards

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </div>
                         </div>
 
-                         <div class="popover top pin-align show-hand">
+                         <div class="popover top pin-align show-hand" onClick="showModal()">
                             <div class="pin"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title" name>Gramercy Tavern</h3>
                             <div class="popover-content">
@@ -117,7 +117,7 @@
                             </div>
                         </div>
 
-                         <div class="popover top pin-align show-hand">
+                         <div class="popover top pin-align show-hand" onClick="showModal()">
                             <div class="pin"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title" name>Graham Avenue Meats And Deli</h3>
                             <div class="popover-content">
@@ -144,7 +144,7 @@
                             </div>
                         </div>
 
-                         <div class="popover top pin-align show-hand">
+                         <div class="popover top pin-align show-hand" onClick="showModal()">
                             <div class="pin"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                             <h3 class="popover-title" name>Trader Joe's Wine Shop</h3>
                             <div class="popover-content">
