--- a/index.html
+++ b/index.html
@@ -230,8 +230,43 @@
             <h3 id="myModalLabel">Eleven Madison Park</h3>
           </div>
           <div class="modal-body">
-            <p>One fine body…</p>
-            <div align="center" id="map" style="z-index: -1; left:0px; top:0px; width: 650px; height: 400px;"></div>
+            <div class="clearfix">
+                <div class="modal-main-col">
+                    <div class="modal-card-content">
+                        <table>
+                            <tr>
+                                <td>
+                                    <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
+                                </td>
+                                <td style="padding-left: 5px;">
+                                    <p>706 Mission St.</p>
+                                    <p>San Francisco, CA, 94103</p>
+                                    <p>Phone: +1-415-908-3801</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="padding-top: 7px;">
+                                    <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_5.png" alt="Rating image" />
+                                </td>
+                                <td>
+                                    <p>Reviews: 2</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <h3>Notes: </h3>
+                    <textarea class="new-comment-input" placeholder="Write a comment or note..."></textarea>
+                </div>
+                <div class="modal-sidebar">
+                    <h3>Social</h3>
+
+                    <h3>Custom Categories</h3>
+
+                    <h3>Yelp Categories</h3>
+
+                </div>
+            </div>
+            <div align="center" id="map" style="clear: both; z-index: -1; left:0px; top:0px; width: 650px; height: 400px;"></div>
           </div>
           <div class="modal-footer">
             <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
