battle of the bulge

--- a/index.html
+++ b/index.html
@@ -254,17 +254,18 @@
                             </tr>
                         </table>
                     </div>
-                    <h3>Notes: </h3>
+                    <p class="modal-title" style="padding-top: 15px;">Notes: </p class="modal-title">
                     <textarea class="new-comment-input" placeholder="Write a comment or note..."></textarea>
                 </div>
                 <div class="modal-sidebar">
-                    <h3>Social</h3>
+                    <p class="modal-title">Social</p class="modal-title">
 
-                    <h3>Custom Categories</h3>
+                    <p class="modal-title">Custom Categories</p class="modal-title">
 
-                    <h3>Yelp Categories</h3>
+                    <p class="modal-title">Yelp Categories</p class="modal-title">
 
                 </div>
+                <div style="clear: both;"></div>
             </div>
             <div align="center" id="map" style="clear: both; z-index: -1; left:0px; top:0px; width: 650px; height: 400px;"></div>
           </div>
