--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@
                 </div>
                 <div class="modal-sidebar">
                     <p class="modal-title">Social</p class="modal-title">
-
+                        <button class="btn btn-primary" type="button" style="margin-bottom: 7px;">Share on Facebook</button>
+                        <button class="btn btn-info" type="button" style="margin-bottom: 7px;">Share on Twitter</button>
                     <p class="modal-title">Custom Categories</p class="modal-title">
 
                     <p class="modal-title">Yelp Categories</p class="modal-title">
@@ -298,7 +299,7 @@
                 </div>
                 <div style="clear: both;"></div>
             </div>
-            <div align="center" id="map" style="clear: both; z-index: -1; left:0px; top:0px; width: 650px; height: 400px;"></div>
+            <div align="center" id="map" style="z-index: -1; width: 630px; height: 400px;"></div>
           </div>
           <div class="modal-footer">
             <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
