--- a/index.html
+++ b/index.html
@@ -266,7 +266,68 @@
                         <button class="btn btn-primary" type="button" style="margin-bottom: 7px;">Share on Facebook</button>
                         <button class="btn btn-info" type="button" style="margin-bottom: 7px;">Share on Twitter</button>
                     <p class="modal-title">Custom Categories</p class="modal-title">
-
+                        <div class="editable-labels">
+                            <div class="editable-label">
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="green-label custom-label-cube"></div>
+                                        </td>
+                                        <td>
+                                            <input class="label-title" id="greenTitle" type="text" placeholder="No name" name="green">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="editable-label">
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="orange-label custom-label-cube"></div>
+                                        </td>
+                                        <td>
+                                            <input class="label-title" id="orangeTitle" type="text" placeholder="No name" name="orange">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="editable-label">
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="purple-label custom-label-cube"></div>
+                                        </td>
+                                        <td>
+                                            <input class="label-title" id="purpleTitle" type="text" placeholder="No name" name="purple">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="editable-label">
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="red-label custom-label-cube"></div>
+                                        </td>
+                                        <td>
+                                            <input class="label-title" id="redTitle" type="text" placeholder="No name" name="red">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="editable-label">
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="blue-label custom-label-cube"></div>
+                                        </td>
+                                        <td>
+                                            <input class="label-title" id="blueTitle" type="text" placeholder="No name" name="blue">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
                     <p class="modal-title">Yelp Categories</p class="modal-title">
 
                 </div>
