Add and Remove Custom Labels

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             </tr>
                         </table>
                     </div>
-                    <p class="modal-title" style="padding-top: 15px;">Notes: </p class="modal-title">
+                    <p class="modal-title" style="padding-top: 15px; padding-bottom: 7px;">Notes: </p class="modal-title">
                     <textarea class="new-comment-input" placeholder="Write a comment or note..."></textarea>
                 </div>
                 <div class="modal-sidebar">
@@ -276,6 +276,9 @@
                                         <td>
                                             <input class="label-title" id="greenTitle" type="text" placeholder="No name" name="green">
                                         </td>
+                                        <td>
+                                            <a href="#" class="btn btn-success btn-small"><i class="icon-white icon-plus"></i></a>
+                                        </td>
                                     </tr>
                                 </table>
                             </div>
@@ -287,6 +290,9 @@
                                         </td>
                                         <td>
                                             <input class="label-title" id="orangeTitle" type="text" placeholder="No name" name="orange">
+                                        </td>
+                                        <td>
+                                            <a href="#" class="btn btn-danger btn-small"><i class="icon-white icon-minus"></i></a>
                                         </td>
                                     </tr>
                                 </table>
@@ -300,6 +306,9 @@
                                         <td>
                                             <input class="label-title" id="purpleTitle" type="text" placeholder="No name" name="purple">
                                         </td>
+                                        <td>
+                                            <a href="#" class="btn btn-success btn-small"><i class="icon-white icon-plus"></i></a>
+                                        </td>
                                     </tr>
                                 </table>
                             </div>
@@ -312,6 +321,9 @@
                                         <td>
                                             <input class="label-title" id="redTitle" type="text" placeholder="No name" name="red">
                                         </td>
+                                        <td>
+                                            <a href="#" class="btn btn-danger btn-small"><i class="icon-white icon-minus"></i></a>
+                                        </td>
                                     </tr>
                                 </table>
                             </div>
@@ -323,6 +335,9 @@
                                         </td>
                                         <td>
                                             <input class="label-title" id="blueTitle" type="text" placeholder="No name" name="blue">
+                                        </td>
+                                        <td>
+                                            <a href="#" class="btn btn-success btn-small"><i class="icon-white icon-plus"></i></a>
                                         </td>
                                     </tr>
                                 </table>
@@ -340,6 +355,5 @@
             <button class="btn btn-primary">Save changes</button>
           </div>
         </div>
-
     </body>
 </html>
