attempting to add twitter

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <script type="text/javascript" src="js/default.js"></script>
     </head>
     <body>
-
         <div id="extruderRight" class="a {title:'Search...', url:'extruderRight.html'}"></div>
 
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -286,8 +285,8 @@
                 </div>
                 <div class="modal-sidebar">
                     <p class="modal-title">Social</p class="modal-title">
-                        <button class="btn btn-primary" type="button" style="margin-bottom: 7px;">Share on Facebook</button>
-                        <button class="btn btn-info" type="button" style="margin-bottom: 7px;">Share on Twitter</button>
+                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.yelp.com/biz/eleven-madison-park-new-york" data-text="Good Eats:" data-size="large" data-count="none">Tweet</a>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                     <p class="modal-title">Custom Categories</p class="modal-title">
                         <div class="editable-labels">
                             <div class="editable-label">
