--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="js/jquery-ui.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/extruder.js" type="text/javascript"></script>
+        <script src="js/filer.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/bootbox.min.js"></script>
         <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
         <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
