--- a/index.html
+++ b/index.html
@@ -76,9 +76,17 @@
                 <div class="row">
                     <div class="bs-docs-example bs-docs-example-popover" >
                         <div class="isotope">
+
                             <div class="card" rating="3" popularity="126" name="Eleven Madison Park">
                                 <div class="popover top pin-align show-hand" id="card1">
                                     <div class="pin-in" id="pin1" onClick="unPin(1)"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
+                                    <div class="card-categories">
+                                        <div class="card-label blue-label"></div>
+                                        <div class="card-label purple-label"></div>
+                                        <div class="card-label orange-label"></div>
+                                        <div class="card-label green-label"></div>
+                                        <div class="card-label red-label"></div>
+                                    </div>
                                     <h3 class="popover-title" onClick="showModal(1)" name>Eleven Madison Park</h3>
                                     <div class="popover-content" onClick="showModal(1)">
                                         <table>
@@ -104,6 +112,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="card" rating="5" popularity="1008" name="Gramercy Tavern">
                               <div class="popover top pin-align show-hand" id="card2">
                                 <div class="pin-in" id="pin2" onClick="unPin(2)"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
