--- a/index.html
+++ b/index.html
@@ -109,16 +109,26 @@
                     drop: function( event, ui ) {
                         ui.helper.fadeOut();
                         var elem = globalElement.detach().draggable( "disable" );
-                        $(".isotope").isotope( 'insert', elem);
-                        $(elem).find(".pin-hidden").removeClass("pin-hidden");
-                        var n = noty({ text: "Bookmark added successfully", type: 'information', layout: 'bottom', theme: 'defaultTheme'});
-                        $(elem).find(".pin-out").removeClass( "pin-out", 2000);
-                        setTimeout(function(){n.close(); }, 3000);
-                        var pinID = parseInt($(elem).attr("searchind"));
-                        var mapUnique = $(elem).attr("mapid");
-                        var lat = parseFloat($(elem).attr("lat"));
-                        var lon = parseFloat($(elem).attr("lon"));
-                        pin(pinID, mapUnique, lat, lon);
+                        var yelp_id = $(elem).attr("yelpid");
+                        if (!isPinned(yelp_id)) {
+                            var pinID = parseInt($(elem).attr("searchind"));
+                            var mapUnique = $(elem).attr("mapid");
+                            var lat = parseFloat($(elem).attr("lat"));
+                            var lon = parseFloat($(elem).attr("lon"));
+                            pin(pinID, mapUnique, lat, lon);
+                            //Todo Check if already pinned before pinning
+                            $(".isotope").isotope( 'insert', elem);
+                            $(elem).find(".pin-hidden").removeClass("pin-hidden");
+                            var n = noty({ text: "Bookmark added successfully", type: 'information', layout: 'bottom', theme: 'defaultTheme'});
+                            $(elem).find(".pin-out").removeClass( "pin-out", 2000);
+                            setTimeout(function(){n.close(); }, 3000);
+                        }
+                        else {
+                            bootbox.dialog("This business card had already been pinned.", [{
+                                "label" : "OK",
+                                "class" : "btn-primary",
+                            }]);
+                        }
                     }
                 });
             });
